--- a/styles/style.css
+++ b/styles/style.css
@@ -5,6 +5,7 @@ html {
 body {
     background: #FFFFFF;
     font-family: 'PT Sans', sans-serif;
+    overflow-x: hidden;
 }
 
 ul {
@@ -141,9 +142,14 @@ a:hover {
     }
 }
 
-@media(max-width: 586px) {
-    .header__address {
-        max-width: 150px;
+@media(max-width: 656px) {
+    .header__info {
+       flex-direction: column; 
+       align-items: flex-end;
+       padding-bottom: .5rem;
+    }
+    .header__logo img {
+        width: 100px;
     }
 }
 
