--- a/styles/style.css
+++ b/styles/style.css
@@ -834,6 +834,18 @@ a:hover {
     transform: rotate(-180deg);
 }
 
+.max_width_1000{
+	display: none;
+}
+
+@media(max-width: 1000px) {
+	.max_width_1000{
+		display: block;
+        width: 0;
+        height: 0;
+	}
+}
+
   /* увеличенная картинка */
   #magnify {
     display: none;
