--- a/styles/style.css
+++ b/styles/style.css
@@ -834,78 +834,6 @@ a:hover {
     transform: rotate(-180deg);
 }
 
-.max_width_1000{
-	display: none;
-}
-
-@media(max-width: 1000px) {
-	.max_width_1000{
-		display: block;
-        width: 0;
-        height: 0;
-	}
-}
-
-  /* увеличенная картинка */
-  #magnify {
-    display: none;
-    position: fixed;
-    max-width: 600px;
-    margin: 0 auto;
-    height: auto;
-    z-index: 999999;
-  }
-  #magnify img {
-    width: 100%;
-  }
-  /* затемняющий фон */
-  #overlay {
-    display: none;
-    background: #000;
-    transition: all 0.3s ease 0s;
-    position: fixed;
-    top: 0;
-    left: 0;
-    overflow: hidden;
-    height: 100vw;
-    width: 100vw;
-    opacity: 0.5;
-    z-index: 999990;
-  }
-  /* кнопка закрытия */
-  #close-popup {
-    width: 30px;
-    height: 30px;
-    background: #FFFFFF;
-    border: 1px solid #AFAFAF;
-    border-radius: 15px;
-    cursor: pointer;
-    position: absolute;
-    top: 15px;
-    right: 15px;
-  }
-  #close-popup i {
-    width: 30px;
-    height: 30px;
-    background: url(https://codernote.ru/files/cross.png) no-repeat center center;
-    background-size: 16px 16px;
-    display: block;
-  }
-  @keyframes rota {
-   25% { transform: rotate(360deg); }
-  }
-  #close-popup:hover {
-    animation: rota 4s infinite normal;
-    -webkit-animation-iteration-count: 1;
-    animation-iteration-count: 1;
-  }
-
-@media(max-width: 646px) {
-    .faq__block {
-        font-size: 1.6rem;
-    }
-}
-
 .partners {
     font-family: PT Sans Caption;
     background-color: #FCDE41;
@@ -1074,6 +1002,76 @@ a:hover {
     position: absolute;
     top: -30px;
     right: 400px;
+}
+
+/* .max_width_1000{
+	display: none;
+} */
+
+@media(max-width: 1000px) {
+	.review-slider img {
+        pointer-events: none;
+    }
+}
+
+  /* увеличенная картинка */
+  #magnify {
+    display: none;
+    position: fixed;
+    max-width: 600px;
+    margin: 0 auto;
+    height: auto;
+    z-index: 999999;
+  }
+  #magnify img {
+    width: 100%;
+  }
+  /* затемняющий фон */
+  #overlay {
+    display: none;
+    background: #000;
+    transition: all 0.3s ease 0s;
+    position: fixed;
+    top: 0;
+    left: 0;
+    overflow: hidden;
+    height: 100vw;
+    width: 100vw;
+    opacity: 0.5;
+    z-index: 999990;
+  }
+  /* кнопка закрытия */
+  #close-popup {
+    width: 30px;
+    height: 30px;
+    background: #FFFFFF;
+    border: 1px solid #AFAFAF;
+    border-radius: 15px;
+    cursor: pointer;
+    position: absolute;
+    top: 15px;
+    right: 15px;
+  }
+  #close-popup i {
+    width: 30px;
+    height: 30px;
+    background: url(https://codernote.ru/files/cross.png) no-repeat center center;
+    background-size: 16px 16px;
+    display: block;
+  }
+  @keyframes rota {
+   25% { transform: rotate(360deg); }
+  }
+  #close-popup:hover {
+    animation: rota 4s infinite normal;
+    -webkit-animation-iteration-count: 1;
+    animation-iteration-count: 1;
+  }
+
+@media(max-width: 646px) {
+    .faq__block {
+        font-size: 1.6rem;
+    }
 }
 
 .team {
